# investment-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  vite.config.ts
src/: constant.rs  error.rs  lib.rs  main.rs
src/account/: portfolio.rs
src/auth/: check.rs  database.rs  login.rs  mod.rs  services.rs
src/data/: mod.rs
src/data/migration/: 001_create_tables.sql
src/database/: accounts.rs  asset.rs  mod.rs  user.rs  users.rs
src/database/account/: kind.rs  mod.rs
src/database/accounts/: mod.rs
src/database/configs/: create.sql  get.sql  mod.rs  set.sql
src/database/migration/: 001_create_tables.sql  mod.rs
src/database/transaction/: action.rs  mod.rs
src/investment/: mod.rs
src/investment/account/: database.rs  delete.rs  fetch.rs  insert.rs  mod.rs  services.rs  update.rs
src/investment/transaction/: actions.rs  database.rs  mod.rs
src/repository/: mod.rs
src/repository/currency/: currency.json  mod.rs
src/transaction/: action.rs  database.rs  mod.rs  services.rs
src/user/: delete.rs  exist.rs  login.rs  mod.rs  register.rs  rotate.rs  signup.rs  update.rs  username.rs
web/: App.vue  main.ts  router.ts  style.css  vuestic.ts
web/components/: Investment.vue  Investments.vue  Login.vue  Overview.vue  Settings.vue
web/components/investment/: Accounts.vue  Transactions.vue
web/components/investments/: Accounts.vue  Details.vue  Transactions.vue
web/components/investments/accounts/: AccountCard.vue  NewAccount.vue
web/components/investments/details/: EditAccount.vue
web/components/investments/edit/: Accounts.vue  Transactions.vue
web/components/settings/: Danger.vue  Users.vue
web/components/settings/users/: UpdatePassword.vue  UpdateUsername.vue
web/composables/: account.ts  auth.ts  interface.ts  user.ts
