[package]
name = "server"
version = "0.0.1"
authors = ["logicfan"]
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "*"
serde = { version = "*", features = ["derive"] }
polodb_core = "5.1"
jwt = "0.16"
rand = "*"
sha2 = "*"
hmac = "*"
uuid = "1.10"
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }
rust_decimal_macros = "*"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["display", "from"] }
const_format = "0.2"
log = "0.4"
