[package]
name = "server"
version = "0.0.1"
authors = ["logicfan"]
edition = "2021"

[dependencies]
# web server
actix-web = "4.9"
actix-files = "0.6"
# crypography
jwt = "0.16"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
# decimal
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }
rust_decimal_macros = "1.36"
# database
serde = { version = "1.0", features = ["derive"] }
polodb_core = "5.1"
rusqlite = { version = "0.32", features = ["bundled"] }
# utility
uuid = "1.10"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["display", "from"] }
const_format = "0.2"
log = "0.4"
