[package]
name = "flexfolio"
version = "0.0.1"
authors = ["logicfan"]
edition = "2021"

[dependencies]
# web server
actix-web = "4.9"
actix-files = "0.6"
# crypography
jwt = "0.16"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
# decimal
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }
rust_decimal_macros = "1.36"
# storage
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_rusqlite = "0.36"
uuid = { version = "1.10", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = [
    "bundled",
    "uuid",
    "serde_json",
    "chrono",
] }
# utility
derive_more = { version = "1.0", features = ["display", "from"] }
const_format = "0.2"
log = "0.4"
env_logger = "0.11"
